# cryptax

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start.sh
.github/workflows/: ruff.yml
backend/: coin_mapping.json  coin_prices.py  fetch_coin_prices.py  last_year_prices.py  portfolio.py  transactions.py
services/tax_report/: main.py  taxreport.py
services/terminal/: main.py
