[project]
name = "cryptax"
version = "0.4.0"
description = "Make tax auditors love crpyto."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fpdf2>=2.8.5",
    "inquirer>=3.4.1",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "progress>=1.6.1",
    "requests>=2.32.5",
    "textual>=6.6.0",
    "xlsxwriter>=3.2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "services"]
